@@ -30,7 +30,7 @@ startScript();
 function startScript() {
 	npc.sayNext("Hey, Man~ What's up? Haha! I am Roger who can teach you adorable new Maplers lots of information.");
 	npc.sayNext("You are asking who made me do this? Ahahahaha!\r\nMyself! I wanted to do this and just be kind to you new travellers.");
-	var hurt = npc.askAccept("So..... Let me just do this for fun! Abaracadabra~!");
+	let hurt = npc.askAccept("So..... Let me just do this for fun! Abaracadabra~!");
 	if (hurt == 1) {
 		if (!npc.playerHasItem(2010007, 1)) {
 			if (!npc.giveItem(2010007, 1)) {
